--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,10 @@
   <title>Cari</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-
+  <link rel="stylesheet" href="/css/cssloader.css" />
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="/js/sprintf-0.7-beta1.js"></script>
+	
 
 </head>
 <body>
