--- a/app/views/sg/index.html
+++ b/app/views/sg/index.html
@@ -1,41 +1,34 @@
 	
 	
-	<link rel="stylesheet" href="/css/thread.css" />
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="/js/sprintf-0.7-beta1.js"></script>
+	<link rel="stylesheet" href="/css/threadindex.css" />
 	<script src="/js/threadindex.js"></script>
 
-	<table class="table">
-		<thead>
-			<th>Author</th>
-			<th>Last By</th>
-			<th>Title</th>
-			<th>Last Post</th>
+		
+		<ul id="threadindex_list" class="threadindex_list">	
 			
-
-		</thead>	
-		<tbody id="threadindex_tbody">	
 			<% @threads_arr.each { |thread| %>
-			<tr>
-				<td><%= thread[1] %></td>
-				<td><%= thread[2] %></td>
-				<td><a href='/sg/thread?tid=<%= thread[0] %>'><%= thread[3].html_safe %></a></td>
-				<td><%= thread[4] %></td>
-			</tr>
+				
+				<li>
+
+					<a href='/sg/thread?tid=<%= thread[0] %>' >
+						
+						<div class="threadindex_title"><b><%= thread[3].html_safe %></b></div>
+						<div class="threadindex_details">By: <b><%= thread[1] %></b>, Last: <b><%= thread[2] %></b>, <%= thread[4] %>, <%= thread[5] %> replies.</div>
+							
+					</a>	
+						
+				</li>
 			<% } %>
-		</tbody>
 
-		<tfoot>
-			<tr>
-				<td colspan="4" style="text-align:center;">
-					<a class="morelink">More...</a>
-					<a class="cssload-loader" style="display:none;"><span class="cssload-loader-inner"></span></a>
-				</td>
+		
+			<li id="threadindex_loadmore">
+				More...
+			</li>
+		
+		</ul>
 
-			</tr>
-		</tfoot>
 
-	</table>
+
 
 	<script>
 		$(document).ready(function() {
