--- a/public/css/threadindex.css
+++ b/public/css/threadindex.css
@@ -1,36 +1,34 @@
+
+
 body {
 	background-color: #fafafa;
 
 }
 
-
-.post_list {
+.threadindex_list {
 	margin: 0 auto;
   	padding: 0;
   	list-style-type: none;
   	background-color: #fff;
-
 }
-
-
 
 @media only screen and (min-width: 788px) {
-	.post_list {
+	.threadindex_list {
 		max-width: 700px;
+
 		background-color: #fff;
   		box-shadow: 0 0 1px #aaa;
-  	}
+
+	}
 }
 
 
-
-
-.post_list li {
+.threadindex_list li {
 	border-top: 1px solid #EDDDDD;
 }
 
-.post {
-		
+.threadindex_list li a {
+	
 	font-size: 14px;
 	line-height: 1.3em;
 	color: #000;
@@ -39,19 +37,19 @@ body {
 	text-decoration: none;
 }
 
-
-.post_text { 
-	margin-top: 20px;
-	font-size: 14px;
+.threadindex_list li a:hover {
+	background-color: #eee;
 }
 
-.post_details {
+.threadindex_title { 
+	font-size: 14px;
+}
+.threadindex_details {
 	font-size: 12px;
 	color:#666;
 }
 
-
-#post_loadmore {
+#threadindex_loadmore {
 
 	text-align: center;
 	cursor: pointer;
@@ -59,11 +57,6 @@ body {
 	padding: 20px 10px;
 	
 }
-
-font {
-	margin-top:20px;
-}
-
 
 
 
