modified:   app/views/layouts/application.html.erb 	modified:   app/views/sg/index.html 	modified:   public/css/threadindex.css 	modified:   public/js/threadindex.js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,12 @@
 <head>
   <title>Cari</title>
 
+  	<meta name="apple-mobile-web-app-title" content="HackerWeb">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="mobile-web-app-capable" content="yes">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/cssloader.css" />
+  <link rel="stylesheet" href="/css/cssloader.css?" />
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="/js/sprintf-0.7-beta1.js"></script>
 	
