--- a/public/css/threadindex.css
+++ b/public/css/threadindex.css
@@ -27,7 +27,7 @@ body {
 	border-top: 1px solid #EDDDDD;
 }
 
-.threadindex_list li a {
+.threadindex_a {
 	
 	font-size: 14px;
 	line-height: 1.3em;
