modified:   app/views/sg/thread.html 	modified:   public/js/thread.js

--- a/app/views/sg/thread.html
+++ b/app/views/sg/thread.html
@@ -18,8 +18,8 @@
 
 			<% if @maxpage > 1 %>
 				<li id="post_loadmore">
-					<div id="post_loadmorefirst">More ...</div>
-					<div id="post_loadmorelast">... Last</div>
+					<div id="post_loadmorefirst">More from First ...</div>
+					<div id="post_loadmorelast">... More from Last</div>
 				</li>
 			<% end %>
 
