modified:   app/views/layouts/application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Cari</title>
 
-  	<meta name="apple-mobile-web-app-title" content="HackerWeb">
+  	<meta name="apple-mobile-web-app-title" content="Cari">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="mobile-web-app-capable" content="yes">
 
