modified:   app/views/sg/index.html

--- a/app/views/sg/index.html
+++ b/app/views/sg/index.html
@@ -28,8 +28,6 @@
 		</ul>
 
 
-
-
 	<script>
 		$(document).ready(function() {
 			ti = new Threadindex();
@@ -37,3 +35,22 @@
 			ti.init();
 		});
 	</script>
+
+
+	<!-- Start of StatCounter Code for Default Guide -->
+	<script type="text/javascript">
+	var sc_project=10547243; 
+	var sc_invisible=1; 
+	var sc_security="daca4dbd"; 
+	var scJsHost = (("https:" == document.location.protocol) ?
+	"https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" +
+	scJsHost+
+	"statcounter.com/counter/counter.js'></"+"script>");
+	</script>
+	<noscript><div class="statcounter"><a title="free web stats"
+	href="http://statcounter.com/" target="_blank"><img
+	class="statcounter"
+	src="http://c.statcounter.com/10547243/0/daca4dbd/1/"
+	alt="free web stats"></a></div></noscript>
+	<!-- End of StatCounter Code for Default Guide -->
