new file:   app/controllers/forex_controller.rb 	new file:   app/controllers/movie_controller.rb 	new file:   app/controllers/politic_controller.rb 	modified:   app/controllers/sg_controller.rb 	modified:   app/views/sg/index.html 	modified:   app/views/sg/thread.html 	modified:   public/js/thread.js 	modified:   public/js/threadindex.js

--- a/app/views/sg/index.html
+++ b/app/views/sg/index.html
@@ -10,7 +10,7 @@
 				
 				<li>
 
-					<a href='/sg/thread?tid=<%= thread[0] %>' class="threadindex_a">
+					<a href='/<%= @controller %>/thread?tid=<%= thread[0] %>' class="threadindex_a">
 						
 						<div class="threadindex_title"><b><%= thread[3].html_safe %></b></div>
 						<div class="threadindex_details">By: <b><%= thread[1] %></b>, Last: <b><%= thread[2] %></b>, <%= thread[4] %>, <%= thread[5] %> replies.</div>
@@ -31,6 +31,7 @@
 	<script>
 		$(document).ready(function() {
 			ti = new Threadindex();
+			ti.controller =  "<%= @controller %>";
 			ti.pageloaded = <%= @pageloaded.to_json.html_safe %>;
 			ti.init();
 		});
