modified:   app/views/sg/index.html

--- a/app/views/sg/index.html
+++ b/app/views/sg/index.html
@@ -1,7 +1,7 @@
 	
 	
 	<link rel="stylesheet" href="/css/threadindex.css" />
-	<script src="/js/threadindex.js"></script>
+	<script src="/js/threadindex.js?"></script>
 
 		
 		<ul id="threadindex_list" class="threadindex_list">	
