modified:   app/controllers/application_controller.rb 	modified:   app/controllers/sg_controller.rb 	new file:   app/views/sg/reply.html 	modified:   app/views/sg/thread.html 	new file:   public/css/reply.css 	modified:   public/css/thread.css

--- a/app/views/sg/thread.html
+++ b/app/views/sg/thread.html
@@ -23,6 +23,13 @@
 				</li>
 			<% end %>
 
+			<li id="post_reply">
+				<a href="/<%= @controller %>/reply?tid=<%= @tid %>">
+					<div>Reply</div>
+				</a>	
+			</li>
+
+
 		</ul>
 
 
