--- a/public/css/thread.css
+++ b/public/css/thread.css
@@ -61,6 +61,20 @@ body {
 	height: 60px;
 }
 
+#post_reply {
+
+	text-align: center;
+	font-size: 14px;
+	padding: 20px 10px;
+	position: relative;
+	height: 60px;
+}
+
+#post_reply a:hover {
+	background-color: #eee;
+}
+
+
 #post_loadmorefirst {
 
 	position: absolute;
