modified:   app/controllers/application_controller.rb 	modified:   app/views/layouts/application.html.erb 	modified:   app/views/sg/reply.html 	modified:   app/views/sg/thread.html 	modified:   public/css/reply.css 	modified:   public/css/thread.css

--- a/app/views/sg/reply.html
+++ b/app/views/sg/reply.html
@@ -7,7 +7,11 @@
 	
 	<li>
 		<a href="/<%= @controller %>/thread?tid=<%= @tid %>" class="threadindex_a">
-			Back
+			<div>
+				<span class="post_back_icon"><i class="fa fa-arrow-left"></i></i></span>	
+				
+			</div>
+
 		</a>
 	</li>
 
@@ -21,12 +25,5 @@
 	</li>
 
 </ul>
-
-<script>
-	$(document).ready( function() {
-
-	});
-</script>
-
 
 
