--- a/app/views/sg/thread.html
+++ b/app/views/sg/thread.html
@@ -7,7 +7,10 @@
 			
 			<li id="post_back">
 				<a href="/<%= @controller %>" class="threadindex_a">
-					<%= @controller.upcase %> Home
+					<div>
+						<span class="post_back_icon"><i class="fa fa-home"></i></span>	
+						<%= @thread_title %>
+					</div>
 				</a>
 			</li>	
 
