modified:   app/controllers/application_controller.rb 	modified:   app/controllers/error_controller.rb 	modified:   app/views/error/not_found.html 	new file:   app/views/sg/menu.html

--- a/app/views/error/not_found.html
+++ b/app/views/error/not_found.html
@@ -1,17 +1,5 @@
 
 
+Not found.
 
 
-
-
-<link rel="stylesheet" href="/css/threadindex.css" />
-
-<ul id="fx_list" class="threadindex_list">	
-	<% @controller_to_fid.keys.each { |key| %>
-		<li>
-			<a href='/<%= key %>' class='threadindex_a'>
-				<%= key %>
-			</a>
-		</li>
-	<% } %>
-</ul>
