--- a/public/css/thread.css
+++ b/public/css/thread.css
@@ -102,7 +102,16 @@ body {
 	position: absolute;
 	left: 14px;
 	top: 18px;
+
+	
 }
+
+@media screen and (max-width: 580px) {
+	.post_back_icon {
+		display:none;
+	}	
+}	
+
 
 .fa-home {
 	font-size: 20px;
